--- a/app/source/sass/modules/_m-masonry.sass
+++ b/app/source/sass/modules/_m-masonry.sass
@@ -2,7 +2,7 @@
   margin: 0 auto
   margin-top: 0px
   +breakpoint($breakpoint-wide-portrait, $no-query: '.no-mqs')
-    margin-top: 85px
+    margin-top: 65px
     margin-bottom: 65px
 
 .grid
