--- a/app/source/sass/modules/_m-navigation.sass
+++ b/app/source/sass/modules/_m-navigation.sass
@@ -30,7 +30,7 @@
   margin: 0
   padding: 0
   +breakpoint($breakpoint-wide-portrait, $no-query: '.no-mqs')
-    bottom: 20px
+    bottom: 30px
 
 .m-navigation--bottom-item
   margin: 10px 0
