--- a/app/source/sass/modules/_m-sliide.sass
+++ b/app/source/sass/modules/_m-sliide.sass
@@ -40,7 +40,6 @@
   flex-direction: column
 
 .slider-toggle
-  position: absolute
   bottom: 0
   display: block
   color: white
@@ -61,15 +60,15 @@
     width: 15px
     background-image: url('../images/icons2x/icon-hamburger.png')
     background-size: 100%
-    top: -13px
+    top: -25px
     left: 50%
     margin-left: -3px
     z-index: 2
   &:after
     position: absolute
     content: ""
-    height: 20px
-    top: -20px
+    height: 30px
+    top: -30px
     left: 0
     right: 0
     background-color: #bf0055
